--- a/style.css
+++ b/style.css
@@ -2,17 +2,16 @@
 
 html, body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
 }
 #map {
   display: flex;
   align-items: center;
   justify-items: center;
-  padding: 5% 5%;
-  top: 0;
-  bottom: 0;
-  width: 90%;
-  height: 80%;
+  border: 5vh solid white;
+  margin: auto;
+  width: 90vw;
+  height: 90vh;
 }
 
 .ol-popup {
@@ -25,15 +24,6 @@ html, body {
   bottom: 12px;
   left: -100%;
   min-width: 60%;
-  /*position: absolute;*/
-  /*background-color: white;*/
-  /*box-shadow: 0 1px 4px rgba(0,0,0,0.2);*/
-  /*padding: 15px;*/
-  /*border-radius: 10px;*/
-  /*border: 1px solid #cccccc;*/
-  /*bottom: 12px;*/
-  /*left: -50px;*/
-  /*min-width: 280px;*/
 }
 
 .ol-popup-closer {
