--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 html, body {
   margin: 0;
   height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 #map {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-  border: 5vh solid white;
-  margin: auto;
+  align-self: center;
   width: 90vw;
   height: 90vh;
 }
