--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ html, body {
   display: flex;
   align-content: center;
   justify-content: center;
+  align-items:  center;
 }
 #map {
-  align-self: center;
   width: 90vw;
   height: 90vh;
 }
@@ -29,7 +29,6 @@ html, body {
 .ol-popup-closer {
   text-decoration: none;
   position: absolute;
-  /*top: 1vw;*/
   right: 2vw;
 }
 .ol-popup-closer:after {
