--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 @import "node_modules/ol/ol.css";
 
-html, body {
+body {
   margin: 0;
   height: 100vh;
   width: 100vw;
   display: flex;
-  align-content: center;
   justify-content: center;
   align-items:  center;
 }
@@ -15,15 +14,12 @@ html, body {
 }
 
 .ol-popup {
-  position: -webkit-sticky;
   background-color: white;
   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   padding: 1.5vw;
   border-radius: 1vw;
   border: 0.1vw solid #cccccc;
   bottom: 12px;
-  left: -100%;
-  min-width: 60%;
 }
 
 .ol-popup-closer {
